# foldermerge

./: .gitignore  .pdm-python  Dockerfile  README.md  __init__.py  core.py  pyproject.toml  pytest_results.xml  run.cmd  tox.ini
.github/workflows/: ci-cd.yml
notebooks/: playground.ipynb
src/foldermerge/: __init__.py  core.py  custom_accessors.py
src/foldermerge/gui/: api.py  flask.py  old_flask.py
src/foldermerge/gui/static/: index.html
src/foldermerge/gui/static/assets/: AboutView-BqxVn6LG.js  AboutView-CrUKjdOp.js  AboutView-Vg_3UzVO.js  ActionsView-BD1PDH-_.js  ActionsView-BLUxrHRw.css  ActionsView-CskTVpLm.css  ActionsView-D5hcQoBo.js  ActionsView-DYPGQFe8.css  ActionsView-Dm_B7P0K.js  index-BWP_0O-u.js  index-CNMI-rzo.css  index-CZZBZ7tZ.js  index-DAMFXb1L.js  index-Dxs2vsGV.css
src/foldermerge/gui/static/css/: files_view_style.css  index_style.css  styling.css
src/foldermerge/gui/static/js/: files_view_script.js  index_script.js  script.js
src/foldermerge/gui/templates/: files_selection.html  files_view.html  index.html  report_view.html
tests/: test_package.py
tests/results/: status.json
