[project]
name = "foldermerge"
version = "0.1.0"
description = "CLI tool allowing to check and merge a \"main\" folder with older versions, removing duplicates and trying to keep main folder organization."
authors = [
    { name = "JostTim", email = "44769559+JostTim@users.noreply.github.com" },
]
dependencies = ["pandas>=2.2.0", "tqdm>=4.66.1"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "tox-pdm>=0.7.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
foldermerge = "foldermerge:console"
